--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li>Read manga</li>
         </ul>
         <p>Please connect with me on <a href="https://www.linkedin.com/in/kashyap-a-628374209/" taget="_blank">LinkedIn here.</a></p>
-        <input type="text" placeholder="Enter your email">
-        <button>Join newsletter</button>
+        <input type="text" placeholder="Nothing here.">
+        <button>Doesn't work</button>
     </body>
 </html>
