--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     </head>
     <body>
  
-        <img src="Snapchat-1712251458.jpg">
+        <img src="k.jpg">
         <h1>Hi, my name is Kashyap</h1>
         <h2>About me:</h2>
         <ul>
             <li>19 years old</li>
-            <li>Lives in India</li>
-            <li>Read manga</li>
+            <li>Just tryna live life to the moment</li>
+            <li>Master procastinator</li>
         </ul>
         <p>Please connect with me on <a href="https://www.linkedin.com/in/kashyap-a-628374209/" taget="_blank">LinkedIn here.</a></p>
         <input type="text" placeholder="Nothing here.">
